--- a/Contact/css/contact.css
+++ b/Contact/css/contact.css
@@ -1,601 +1,139 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
-
-/* Custom Colors */
-
-/* CORE STYLES */
-/*:root {
-  --primary-color: rgba(165, 129, 64, 0.40);
-  --overlay-color: rgba(24, 39, 51 , 0.85);
-  --menu-speed: 0.75s;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.4;
-  overflow: auto;
+  background-color: #444442;
+  padding-top: 85px;
+  background-image: url("https://i.pinimg.com/originals/ef/7f/b1/ef7fb1b37078b6a2aef8e40710446bfa.jpg");
 }
 
-.container {
-  max-width: 960px;
-  margin: auto;
-  overflow: hidden;
-  padding: 0 3rem;
-}
-
-.showcase {
-  background: var(--primary-color);
-  color: #fff;
-  height: 100vh;
-  position: relative;
-}
-
-.showcase:before {
-  content: '';
-  background: url('https://i.redd.it/ikwxh2790i421.jpg') no-repeat center center/cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: -1;
-}
-
-.showcase .showcase-inner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+h1 {
+  font-family: "Poppins", sans-serif, "arial";
+  font-weight: 600;
+  font-size: 72px;
+  color: white;
   text-align: center;
-  height: 100%;
 }
 
-.showcase h1 {
-  font-size: 4rem;
+h4 {
+  font-family: "Roboto", sans-serif, "arial";
+  font-weight: 400;
+  font-size: 20px;
+  color: #9b9b9b;
+  line-height: 1.5;
 }
 
-.showcase p {
-  font-size: 1.3rem;
+/* ///// inputs /////*/
+
+input:focus ~ label,
+textarea:focus ~ label,
+input:valid ~ label,
+textarea:valid ~ label {
+  font-size: 0.75em;
+  color: #999;
+  top: -5px;
+  -webkit-transition: all 0.225s ease;
+  transition: all 0.225s ease;
 }
 
-.btn {
-  display: inline-block;
-  border: none;
-  background: rgba(24, 39, 51 , 0.85);
-  color: #ffff;
-  padding: 0.75rem 1.5rem;
-  margin-top: 1rem;
-  transition: opacity 1s ease-in-out;
-  text-decoration: none;
-}
-
-.btn-news {
-  display: inline-block;
-  border: none;
-  background: rgba(24, 39, 51 , 0.85);
-  color: #ffff;
-  padding: 0.75rem 1.5rem;
-  margin-top: 1rem;
-  transition: opacity 1s ease-in-out;
-  text-decoration: none;
-}
-
-
-.btn:hover {
-  opacity: 0.7;
-}
-
-.btn-h-abt{
-  font-family: 'Open Sans Condensed', sans-serif, bold;
-  font-size: 27px;
-  color: #506772;
-}
-
-/* Alert Box */
-/*.alert {
-  padding: 20px;
-  background-color: rgba(24, 39, 51 , 0.85);
-  color: white;
-  border-radius: 7.5px, fill;
-}
-
-.closebtn {
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.closebtn:hover {
-  color: black;
-}
-
-#s-1{
-  margin-left: 4em;
-}
-
-/* MENU STYLES */
-/*.menu-wrap {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-.menu-wrap .toggler {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  cursor: pointer;
-  width: 50px;
-  height: 50px;
-  opacity: 0;
-}
-
-.menu-wrap .hamburger {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  width: 60px;
-  height: 60px;
-  padding: 1rem;
-  background: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* Hamburger Line 
-.menu-wrap .hamburger > div {
+.styled-input {
+  float: left;
+  width: 293px;
+  margin: 1rem 0;
   position: relative;
-  flex: none;
-  width: 100%;
-  height: 2px;
-  background: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.4s ease;
+  border-radius: 4px;
 }
 
-/* Hamburger Lines - Top & Bottom 
-.menu-wrap .hamburger > div::before,
-.menu-wrap .hamburger > div::after {
-  content: '';
+@media only screen and (max-width: 768px) {
+  .styled-input {
+    width: 100%;
+  }
+}
+
+.styled-input label {
+  color: #999;
+  padding: 1.3rem 30px 1rem 30px;
   position: absolute;
-  z-index: 1;
-  top: -10px;
-  width: 100%;
-  height: 2px;
-  background: inherit;
-}
-
-/* Moves Line Down 
-.menu-wrap .hamburger > div::after {
   top: 10px;
-}
-
-/* Toggler Animation 
-.menu-wrap .toggler:checked + .hamburger > div {
-  transform: rotate(135deg);
-}
-
-/* Turns Lines Into X 
-.menu-wrap .toggler:checked + .hamburger > div:before,
-.menu-wrap .toggler:checked + .hamburger > div:after {
-  top: 0;
-  transform: rotate(90deg);
-}
-
-/* Rotate On Hover When Checked 
-.menu-wrap .toggler:checked:hover + .hamburger > div {
-  transform: rotate(225deg);
-}
-
-/* Show Menu 
-.menu-wrap .toggler:checked ~ .menu {
-  visibility: visible;
-}
-
-.menu-wrap .toggler:checked ~ .menu > div {
-  transform: scale(1);
-  transition-duration: var(--menu-speed);
-}
-
-.menu-wrap .toggler:checked ~ .menu > div > div {
-  opacity: 1;
-  transition:  opacity 0.4s ease 0.4s;
-}
-
-.menu-wrap .menu {
-  position: fixed;
-  top: 0;
   left: 0;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  pointer-events: none;
+}
+
+.styled-input.wide {
+  width: 650px;
+  max-width: 100%;
+}
+
+input,
+textarea {
+  padding: 30px;
+  border: 0;
   width: 100%;
-  height: 100%;
-  visibility: hidden;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-size: 1rem;
+  background-color: #2d2d2d;
+  color: white;
+  border-radius: 4px;
 }
 
-.menu-wrap .menu > div {
-  background: rgba(92, 74, 114, 0.76);
-  border-radius: 50%;
-  width: 200vw;
-  height: 200vw;
-  display: flex;
-  flex: none;
-  align-items: center;
-  justify-content: center;
-  transform: scale(0);
-  transition: all 0.4s ease;
+input:focus,
+textarea:focus {
+  outline: 0;
 }
 
-.menu-wrap .menu > div > div {
-  text-align: center;
-  max-width: 90vw;
-  max-height: 100vh;
-  opacity: 0;
-  transition: opacity 0.4s ease;
+input:focus ~ span,
+textarea:focus ~ span {
+  width: 100%;
+  -webkit-transition: all 0.075s ease;
+  transition: all 0.075s ease;
 }
 
-.menu-wrap .menu > div > div > ul > li {
-  list-style: none;
-  color: #fff;
-  font-size: 1.5rem;
-  padding: 1rem;
+textarea {
+  width: 100%;
+  min-height: 15em;
 }
 
-.menu-wrap .menu > div > div > ul > li > a {
-  color: inherit;
-  text-decoration: none;
-  transition: color 0.4s ease;
+.input-container {
+  width: 650px;
+  max-width: 100%;
+  margin: 20px auto 25px auto;
 }
 
-
-/* Parallax Scrolling 
-
-.container-1 {
-  display:block;
-  height: 100%;
-   margin: 0;
-   font: 400 15px/1.8 "Lato", sans-serif;
-   color: #777;
+.submit-btn {
+  float: right;
+  padding: 7px 35px;
+  border-radius: 60px;
+  display: inline-block;
+  background-color: #4b8cfb;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.07);
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
 }
-.image-container {
-    position: relative;
-    opacity: 0.65;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cove@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
-    
-    /* Custom Colors */
-    
-    /* CORE STYLES 
-    :root {
-      --primary-color: rgba(165, 129, 64, 0.40);
-      --overlay-color: rgba(24, 39, 51 , 0.85);
-      --menu-speed: 0.75s;
-    }
-    
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    
-    body {
-      --primary-color: rgba(165, 129, 64, 0.40);
-      font-family: 'Roboto', sans-serif;
-      line-height: 1.4;
-      overflow: auto;
-    }
-    
-    .container {
-      max-width: 960px;
-      margin: auto;
-      overflow: hidden;
-      padding: 0 3rem;
-    }
-    
-    .showcase {
-      background: var(--primary-color);
-      color: #fff;
-      height: 100vh;
-      position: relative;
-    }
-    
-    .showcase:before {
-      content: '';
-      background: url('https://i.redd.it/ikwxh2790i421.jpg') no-repeat center center/cover;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      z-index: -1;
-    }
-    
-    .showcase .showcase-inner {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      height: 100%;
-    }
-    
-    .showcase h1 {
-      font-size: 4rem;
-    }
-    
-    .showcase p {
-      font-size: 1.3rem;
-    }
-    
-    .btn {
-      display: inline-block;
-      border: none;
-      background: rgba(24, 39, 51 , 0.85);
-      color: #ffff;
-      padding: 0.75rem 1.5rem;
-      margin-top: 1rem;
-      transition: opacity 1s ease-in-out;
-      text-decoration: none;
-    }
-    
-    .btn-news {
-      display: inline-block;
-      border: none;
-      background: rgba(24, 39, 51 , 0.85);
-      color: #ffff;
-      padding: 0.75rem 1.5rem;
-      margin-top: 1rem;
-      transition: opacity 1s ease-in-out;
-      text-decoration: none;
-    }
-    
-    
-    .btn:hover {
-      opacity: 0.7;
-    }
-    
-    .btn-h-abt{
-      font-family: 'Open Sans Condensed', sans-serif, bold;
-      font-size: 27px;
-      color: #506772;
-    }
-    
-    /* Alert Box 
-    .alert {
-      padding: 20px;
-      background-color: rgba(24, 39, 51 , 0.85);
-      color: white;
-      border-radius: 7.5px, fill;
-    }
-    
-    .closebtn {
-      margin-left: 15px;
-      color: white;
-      font-weight: bold;
-      float: right;
-      font-size: 22px;
-      line-height: 20px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    
-    .closebtn:hover {
-      color: black;
-    }
-    
-    #s-1{
-      margin-left: 4em;
-    }
-    
-    /* MENU STYLES 
-    .menu-wrap {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1;
-    }
-    
-    .menu-wrap .toggler {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 2;
-      cursor: pointer;
-      width: 50px;
-      height: 50px;
-      opacity: 0;
-    }
-    
-    .menu-wrap .hamburger {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
-      width: 60px;
-      height: 60px;
-      padding: 1rem;
-      background: none;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    
-    /* Hamburger Line 
-    .menu-wrap .hamburger > div {
-      position: relative;
-      flex: none;
-      width: 100%;
-      height: 2px;
-      background: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.4s ease;
-    }
-    
-    /* Hamburger Lines - Top & Bottom 
-    .menu-wrap .hamburger > div::before,
-    .menu-wrap .hamburger > div::after {
-      content: '';
-      position: absolute;
-      z-index: 1;
-      top: -10px;
-      width: 100%;
-      height: 2px;
-      background: inherit;
-    }
-    
-    /* Moves Line Down 
-    .menu-wrap .hamburger > div::after {
-      top: 10px;
-    }
-    
-    /* Toggler Animation 
-    .menu-wrap .toggler:checked + .hamburger > div {
-      transform: rotate(135deg);
-    }
-    
-    /* Turns Lines Into X 
-    .menu-wrap .toggler:checked + .hamburger > div:before,
-    .menu-wrap .toggler:checked + .hamburger > div:after {
-      top: 0;
-      transform: rotate(90deg);
-    }
-    
-    /* Rotate On Hover When Checked 
-    .menu-wrap .toggler:checked:hover + .hamburger > div {
-      transform: rotate(225deg);
-    }
-    
-    /* Show Menu 
-    .menu-wrap .toggler:checked ~ .menu {
-      visibility: visible;
-    }
-    
-    .menu-wrap .toggler:checked ~ .menu > div {
-      transform: scale(1);
-      transition-duration: var(--menu-speed);
-    }
-    
-    .menu-wrap .toggler:checked ~ .menu > div > div {
-      opacity: 1;
-      transition:  opacity 0.4s ease 0.4s;
-    }
-    
-    .menu-wrap .menu {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      visibility: hidden;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    
-    .menu-wrap .menu > div {
-      background: rgba(92, 74, 114, 0.76);
-      border-radius: 50%;
-      width: 200vw;
-      height: 200vw;
-      display: flex;
-      flex: none;
-      align-items: center;
-      justify-content: center;
-      transform: scale(0);
-      transition: all 0.4s ease;
-    }
-    
-    .menu-wrap .menu > div > div {
-      text-align: center;
-      max-width: 90vw;
-      max-height: 100vh;
-      opacity: 0;
-      transition: opacity 0.4s ease;
-    }
-    
-    .menu-wrap .menu > div > div > ul > li {
-      list-style: none;
-      color: #fff;
-      font-size: 1.5rem;
-      padding: 1rem;
-    }
-    
-    .menu-wrap .menu > div > div > ul > li > a {
-      color: inherit;
-      text-decoration: none;
-      transition: color 0.4s ease;
-    }
-    
-    /* Indent 
-    
-     .indent-h1{
-       padding: 5px;
-     }
-    
-    
-    /* Parallax Scrolling 
-    
-    .container-1 {
-      display:block;
-      height: 100%;
-       margin: 0;
-       font: 400 15px/1.8 "Lato", sans-serif;
-       color: #777;
-    }
-    .image-container {
-        position: relative;
-        opacity: 0.65;
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    
-    .par-img-1{
-      min-height: 400px;
-      background-image: url("https://i.pinimg.com/originals/e6/ee/04/e6ee045ed79d9e7f4a1e096995ac16ed.jpg")
-      
-    }
-    
-    #h1-cnt-1{
-      color: white;
-      text-shadow: 50px rgba(24, 39, 51 , 0.85)aa;
-      text-align: center;
-    }
-    
-    /* Copyright 
-    .copy{
-      position: absolute;
-      height: 10px;
-      color: white;
-    }
-    
-    #copy-p{
-      color:  white;
-    }
-    */
+
+.submit-btn:hover {
+  transform: translateY(1px);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
+}
+
+@media (max-width: 768px) {
+  .submit-btn {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+}
+
+input[type="checkbox"] + label {
+  color: #ccc;
+  font-style: italic;
+}
+
+input[type="checkbox"]:checked + label {
+  color: #f00;
+  font-style: normal;
+}
+
+.row {
+  color: rgba(24, 39, 51, 0.85);
+}
