--- a/What I do/css/wid.css
+++ b/What I do/css/wid.css
@@ -1,13 +1,13 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
-
-/* Custom Colors */
-
 /* CORE STYLES */
-/*:root {
-  --primary-color: rgba(165, 129, 64, 0.40);
-  --overlay-color: rgba(24, 39, 51 , 0.85);
+:root {
+  --primary-color: rgba(165, 129, 64, 0.4);
+  --overlay-color: rgba(24, 39, 51, 0.85);
   --menu-speed: 0.75s;
+}
+
+/* Selection */
+::selection {
+  color: rgba(24, 39, 51, 0.85);
 }
 
 * {
@@ -17,7 +17,8 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  --primary-color: rgba(165, 129, 64, 0.4);
+  font-family: "Roboto", sans-serif;
   line-height: 1.4;
   overflow: auto;
 }
@@ -37,8 +38,9 @@ body {
 }
 
 .showcase:before {
-  content: '';
-  background: url('https://i.redd.it/ikwxh2790i421.jpg') no-repeat center center/cover;
+  content: "";
+  background: url("https://i.pinimg.com/originals/ec/c7/8b/ecc78b545ada08f80e12f8fe3190b821.jpg")
+    no-repeat center center/cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -67,7 +69,7 @@ body {
 .btn {
   display: inline-block;
   border: none;
-  background: rgba(24, 39, 51 , 0.85);
+  background: rgba(24, 39, 51, 0.85);
   color: #ffff;
   padding: 0.75rem 1.5rem;
   margin-top: 1rem;
@@ -78,7 +80,7 @@ body {
 .btn-news {
   display: inline-block;
   border: none;
-  background: rgba(24, 39, 51 , 0.85);
+  background: rgba(24, 39, 51, 0.85);
   color: #ffff;
   padding: 0.75rem 1.5rem;
   margin-top: 1rem;
@@ -86,21 +88,20 @@ body {
   text-decoration: none;
 }
 
-
 .btn:hover {
   opacity: 0.7;
 }
 
-.btn-h-abt{
-  font-family: 'Open Sans Condensed', sans-serif, bold;
+.btn-h-abt {
+  font-family: "Open Sans Condensed", sans-serif, bold;
   font-size: 27px;
   color: #506772;
 }
 
 /* Alert Box */
-/*.alert {
+.alert {
   padding: 20px;
-  background-color: rgba(24, 39, 51 , 0.85);
+  background-color: rgba(24, 39, 51, 0.85);
   color: white;
   border-radius: 7.5px, fill;
 }
@@ -120,12 +121,12 @@ body {
   color: black;
 }
 
-#s-1{
+#s-1 {
   margin-left: 4em;
 }
 
 /* MENU STYLES */
-/*.menu-wrap {
+.menu-wrap {
   position: fixed;
   top: 0;
   left: 0;
@@ -157,7 +158,7 @@ body {
   justify-content: center;
 }
 
-/* Hamburger Line 
+/* Hamburger Line */
 .menu-wrap .hamburger > div {
   position: relative;
   flex: none;
@@ -170,10 +171,10 @@ body {
   transition: all 0.4s ease;
 }
 
-/* Hamburger Lines - Top & Bottom 
+/* Hamburger Lines - Top & Bottom */
 .menu-wrap .hamburger > div::before,
 .menu-wrap .hamburger > div::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: 1;
   top: -10px;
@@ -182,29 +183,29 @@ body {
   background: inherit;
 }
 
-/* Moves Line Down 
+/* Moves Line Down */
 .menu-wrap .hamburger > div::after {
   top: 10px;
 }
 
-/* Toggler Animation 
+/* Toggler Animation */
 .menu-wrap .toggler:checked + .hamburger > div {
   transform: rotate(135deg);
 }
 
-/* Turns Lines Into X 
+/* Turns Lines Into X */
 .menu-wrap .toggler:checked + .hamburger > div:before,
 .menu-wrap .toggler:checked + .hamburger > div:after {
   top: 0;
   transform: rotate(90deg);
 }
 
-/* Rotate On Hover When Checked 
+/* Rotate On Hover When Checked */
 .menu-wrap .toggler:checked:hover + .hamburger > div {
   transform: rotate(225deg);
 }
 
-/* Show Menu 
+/* Show Menu */
 .menu-wrap .toggler:checked ~ .menu {
   visibility: visible;
 }
@@ -216,7 +217,7 @@ body {
 
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
-  transition:  opacity 0.4s ease 0.4s;
+  transition: opacity 0.4s ease 0.4s;
 }
 
 .menu-wrap .menu {
@@ -266,336 +267,40 @@ body {
   transition: color 0.4s ease;
 }
 
+/* Indent */
 
-/* Parallax Scrolling 
+.indent-h1 {
+  padding: 5px;
+}
+
+/* Parallax Scrolling */
+.container-1::selection {
+  color: rgba(165, 129, 64, 0.4);
+}
 
 .container-1 {
-  display:block;
+  display: block;
   height: 100%;
-   margin: 0;
-   font: 400 15px/1.8 "Lato", sans-serif;
-   color: #777;
+  margin: 0;
+  font: 400 15px/1.8 "Lato", sans-serif;
+  color: #777;
 }
 .image-container {
-    position: relative;
-    opacity: 0.65;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cove@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
-    
-    /* Custom Colors */
-    
-    /* CORE STYLES 
-    :root {
-      --primary-color: rgba(165, 129, 64, 0.40);
-      --overlay-color: rgba(24, 39, 51 , 0.85);
-      --menu-speed: 0.75s;
-    }
-    
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    
-    body {
-      --primary-color: rgba(165, 129, 64, 0.40);
-      font-family: 'Roboto', sans-serif;
-      line-height: 1.4;
-      overflow: auto;
-    }
-    
-    .container {
-      max-width: 960px;
-      margin: auto;
-      overflow: hidden;
-      padding: 0 3rem;
-    }
-    
-    .showcase {
-      background: var(--primary-color);
-      color: #fff;
-      height: 100vh;
-      position: relative;
-    }
-    
-    .showcase:before {
-      content: '';
-      background: url('https://i.redd.it/ikwxh2790i421.jpg') no-repeat center center/cover;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      z-index: -1;
-    }
-    
-    .showcase .showcase-inner {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      height: 100%;
-    }
-    
-    .showcase h1 {
-      font-size: 4rem;
-    }
-    
-    .showcase p {
-      font-size: 1.3rem;
-    }
-    
-    .btn {
-      display: inline-block;
-      border: none;
-      background: rgba(24, 39, 51 , 0.85);
-      color: #ffff;
-      padding: 0.75rem 1.5rem;
-      margin-top: 1rem;
-      transition: opacity 1s ease-in-out;
-      text-decoration: none;
-    }
-    
-    .btn-news {
-      display: inline-block;
-      border: none;
-      background: rgba(24, 39, 51 , 0.85);
-      color: #ffff;
-      padding: 0.75rem 1.5rem;
-      margin-top: 1rem;
-      transition: opacity 1s ease-in-out;
-      text-decoration: none;
-    }
-    
-    
-    .btn:hover {
-      opacity: 0.7;
-    }
-    
-    .btn-h-abt{
-      font-family: 'Open Sans Condensed', sans-serif, bold;
-      font-size: 27px;
-      color: #506772;
-    }
-    
-    /* Alert Box 
-    .alert {
-      padding: 20px;
-      background-color: rgba(24, 39, 51 , 0.85);
-      color: white;
-      border-radius: 7.5px, fill;
-    }
-    
-    .closebtn {
-      margin-left: 15px;
-      color: white;
-      font-weight: bold;
-      float: right;
-      font-size: 22px;
-      line-height: 20px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    
-    .closebtn:hover {
-      color: black;
-    }
-    
-    #s-1{
-      margin-left: 4em;
-    }
-    
-    /* MENU STYLES 
-    .menu-wrap {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1;
-    }
-    
-    .menu-wrap .toggler {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 2;
-      cursor: pointer;
-      width: 50px;
-      height: 50px;
-      opacity: 0;
-    }
-    
-    .menu-wrap .hamburger {
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
-      width: 60px;
-      height: 60px;
-      padding: 1rem;
-      background: none;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    
-    /* Hamburger Line 
-    .menu-wrap .hamburger > div {
-      position: relative;
-      flex: none;
-      width: 100%;
-      height: 2px;
-      background: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.4s ease;
-    }
-    
-    /* Hamburger Lines - Top & Bottom 
-    .menu-wrap .hamburger > div::before,
-    .menu-wrap .hamburger > div::after {
-      content: '';
-      position: absolute;
-      z-index: 1;
-      top: -10px;
-      width: 100%;
-      height: 2px;
-      background: inherit;
-    }
-    
-    /* Moves Line Down 
-    .menu-wrap .hamburger > div::after {
-      top: 10px;
-    }
-    
-    /* Toggler Animation 
-    .menu-wrap .toggler:checked + .hamburger > div {
-      transform: rotate(135deg);
-    }
-    
-    /* Turns Lines Into X 
-    .menu-wrap .toggler:checked + .hamburger > div:before,
-    .menu-wrap .toggler:checked + .hamburger > div:after {
-      top: 0;
-      transform: rotate(90deg);
-    }
-    
-    /* Rotate On Hover When Checked 
-    .menu-wrap .toggler:checked:hover + .hamburger > div {
-      transform: rotate(225deg);
-    }
-    
-    /* Show Menu 
-    .menu-wrap .toggler:checked ~ .menu {
-      visibility: visible;
-    }
-    
-    .menu-wrap .toggler:checked ~ .menu > div {
-      transform: scale(1);
-      transition-duration: var(--menu-speed);
-    }
-    
-    .menu-wrap .toggler:checked ~ .menu > div > div {
-      opacity: 1;
-      transition:  opacity 0.4s ease 0.4s;
-    }
-    
-    .menu-wrap .menu {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      visibility: hidden;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    
-    .menu-wrap .menu > div {
-      background: rgba(92, 74, 114, 0.76);
-      border-radius: 50%;
-      width: 200vw;
-      height: 200vw;
-      display: flex;
-      flex: none;
-      align-items: center;
-      justify-content: center;
-      transform: scale(0);
-      transition: all 0.4s ease;
-    }
-    
-    .menu-wrap .menu > div > div {
-      text-align: center;
-      max-width: 90vw;
-      max-height: 100vh;
-      opacity: 0;
-      transition: opacity 0.4s ease;
-    }
-    
-    .menu-wrap .menu > div > div > ul > li {
-      list-style: none;
-      color: #fff;
-      font-size: 1.5rem;
-      padding: 1rem;
-    }
-    
-    .menu-wrap .menu > div > div > ul > li > a {
-      color: inherit;
-      text-decoration: none;
-      transition: color 0.4s ease;
-    }
-    
-    /* Indent 
-    
-     .indent-h1{
-       padding: 5px;
-     }
-    
-    
-    /* Parallax Scrolling 
-    
-    .container-1 {
-      display:block;
-      height: 100%;
-       margin: 0;
-       font: 400 15px/1.8 "Lato", sans-serif;
-       color: #777;
-    }
-    .image-container {
-        position: relative;
-        opacity: 0.65;
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    
-    .par-img-1{
-      min-height: 400px;
-      background-image: url("https://i.pinimg.com/originals/e6/ee/04/e6ee045ed79d9e7f4a1e096995ac16ed.jpg")
-      
-    }
-    
-    #h1-cnt-1{
-      color: white;
-      text-shadow: 50px rgba(24, 39, 51 , 0.85)aa;
-      text-align: center;
-    }
-    
-    /* Copyright 
-    .copy{
-      position: absolute;
-      height: 10px;
-      color: white;
-    }
-    
-    #copy-p{
-      color:  white;
-    }
-    */
+  position: relative;
+  opacity: 0.65;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.par-img-1 {
+  min-height: 400px;
+  background-image: url("https://c1.wallpaperflare.com/preview/467/704/1016/wood-wooden-desktop-table.jpg");
+}
+
+#h1-cnt-1 {
+  color: white;
+  text-shadow: 50px rgba(24, 39, 51, 0.85) aa;
+  text-align: center;
+}
