--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   background-color: rgba(24, 39, 51, 0.85);
   font-family: "Montserrat", sans-serif;
 }
