--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,52 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgba(24, 39, 51, 0.85);
   font-family: "Montserrat", sans-serif;
+}
+
+html,
+body {
+  background-color: whitesmoke;
+}
+
+.form-contianer {
+  position: relative;
+  left: 20%;
+  width: 60%;
+  height: 100vh;
+  background-color: whitesmoke;
+}
+
+.hr-1 {
+  height: 100px;
+  opacity: 0%;
+}
+
+.contact-form {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 10px;
+  height: 600px;
+}
+
+input,
+textarea {
+  width: 100%;
+  margin-top: 2rem;
+  border: none;
+  border-bottom: 1 px solid black;
+  background-color: whitesmoke;
+}
+
+.submit {
+  border: 1px solid black;
+  padding: 1rem;
+  text-align: center;
+  background-color: whitesmoke;
+  cursor: pointer;
+}
+
+submit:hover {
+  opacity: 0.6;
 }
