--- a/Blog/css/bstyle.css
+++ b/Blog/css/bstyle.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
 
 /* Custom Colors */
 
 /* CORE STYLES */
 :root {
-  --primary-color: rgba(165, 129, 64, 0.40);
-  --overlay-color: rgba(24, 39, 51 , 0.85);
+  --primary-color: rgba(165, 129, 64, 0.4);
+  --overlay-color: rgba(24, 39, 51, 0.85);
   --menu-speed: 0.75s;
 }
 
@@ -17,8 +17,8 @@
 }
 
 body {
-  --primary-color: rgba(165, 129, 64, 0.40);
-  font-family: 'Roboto', sans-serif;
+  --primary-color: rgba(165, 129, 64, 0.4);
+  font-family: "Roboto", sans-serif;
   line-height: 1.4;
   overflow: auto;
 }
@@ -38,8 +38,9 @@ body {
 }
 
 .showcase:before {
-  content: '';
-  background: url('https://i.redd.it/ikwxh2790i421.jpg') no-repeat center center/cover;
+  content: "";
+  background: url("https://i.redd.it/ikwxh2790i421.jpg") no-repeat center
+    center/cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -68,7 +69,7 @@ body {
 .btn {
   display: inline-block;
   border: none;
-  background: rgba(24, 39, 51 , 0.85);
+  background: rgba(24, 39, 51, 0.85);
   color: #ffff;
   padding: 0.75rem 1.5rem;
   margin-top: 1rem;
@@ -79,7 +80,7 @@ body {
 .btn-news {
   display: inline-block;
   border: none;
-  background: rgba(24, 39, 51 , 0.85);
+  background: rgba(24, 39, 51, 0.85);
   color: #ffff;
   padding: 0.75rem 1.5rem;
   margin-top: 1rem;
@@ -87,13 +88,12 @@ body {
   text-decoration: none;
 }
 
-
 .btn:hover {
   opacity: 0.7;
 }
 
-.btn-h-abt{
-  font-family: 'Open Sans Condensed', sans-serif, bold;
+.btn-h-abt {
+  font-family: "Open Sans Condensed", sans-serif, bold;
   font-size: 27px;
   color: #506772;
 }
@@ -101,7 +101,7 @@ body {
 /* Alert Box */
 .alert {
   padding: 20px;
-  background-color: rgba(24, 39, 51 , 0.85);
+  background-color: rgba(24, 39, 51, 0.85);
   color: white;
   border-radius: 7.5px, fill;
 }
@@ -121,7 +121,7 @@ body {
   color: black;
 }
 
-#s-1{
+#s-1 {
   margin-left: 4em;
 }
 
@@ -174,7 +174,7 @@ body {
 /* Hamburger Lines - Top & Bottom */
 .menu-wrap .hamburger > div::before,
 .menu-wrap .hamburger > div::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: 1;
   top: -10px;
@@ -217,7 +217,7 @@ body {
 
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
-  transition:  opacity 0.4s ease 0.4s;
+  transition: opacity 0.4s ease 0.4s;
 }
 
 .menu-wrap .menu {
@@ -269,38 +269,36 @@ body {
 
 /* Indent */
 
- .indent-h1{
-   padding: 5px;
- }
-
+.indent-h1 {
+  padding: 5px;
+}
 
 /* Parallax Scrolling */
 
 .container-1 {
-  display:block;
+  display: block;
   height: 100%;
-   margin: 0;
-   font: 400 15px/1.8 "Lato", sans-serif;
-   color: #777;
+  margin: 0;
+  font: 400 15px/1.8 "Lato", sans-serif;
+  color: #777;
 }
 .image-container {
-    position: relative;
-    opacity: 0.65;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  position: relative;
+  opacity: 0.65;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.par-img-1{
+.par-img-1 {
   min-height: 400px;
-  background-image: url("https://i.pinimg.com/originals/e6/ee/04/e6ee045ed79d9e7f4a1e096995ac16ed.jpg")
-  
+  background-image: url("https://i.pinimg.com/originals/e6/ee/04/e6ee045ed79d9e7f4a1e096995ac16ed.jpg");
 }
 
-#h1-cnt-1{
+#h1-cnt-1 {
   color: white;
-  text-shadow: 50px rgba(24, 39, 51 , 0.85)aa;
+  text-shadow: 50px rgba(24, 39, 51, 0.85) aa;
   text-align: center;
 }
 
