--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,16 +20,11 @@ body {
   background-color: whitesmoke;
 }
 
-.hr-1 {
-  height: 100px;
-  opacity: 0%;
-}
-
 .contact-form {
   position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 10px;
+  top: 10%;
+  left: 10%;
+  width: 80%;
   height: 600px;
 }
 
@@ -38,8 +33,7 @@ textarea {
   width: 100%;
   margin-top: 2rem;
   border: none;
-  border-bottom: 1 px solid black;
-  background-color: whitesmoke;
+  border-bottom: 1px solid black;
 }
 
 .submit {
@@ -50,6 +44,6 @@ textarea {
   cursor: pointer;
 }
 
-submit:hover {
-  opacity: 0.6;
+.submit:hover {
+  opacity: 20px;
 }
